# productive-doomscrolling

./: .env.example  .gitignore  Dockerfile  Goal.txt  README.md  requirements.txt
.agents/rules/: attitude-guide.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css
client/src/components/: BottomNav.jsx  FeedContainer.jsx  FeedItem.jsx  VideoCard.jsx  YouTubePlayer.jsx
client/src/data/: dummyLibrary.js
client/src/hooks/: useLibrary.js
client/src/pages/: AddVideoPage.jsx  ClipsPage.jsx  FeedPage.jsx  HomePage.jsx  ProcessingPage.jsx
client/src/utils/: videoUtils.js
docs/decisions/: 001-architecture-stack.md  002-data-layer-infrastructure.md
scripts/: test_pipeline.py
server/: main.py  pyproject.toml
server/api/: routes.py
server/pipeline/: step1_download.py  step2_transcribe.py  step3_segment.py  step4_clip.py
server/schemas/: processing.py
